--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Music Store</title>
 </head>
 
 <body>
@@ -52,14 +52,6 @@
     src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
     crossorigin
   ></script>
-  <script>
-    const removeIframe = function () {
-      const iframe = Array.from(document.querySelectorAll('.iframe'))
-      console.log(iframe)
-      iframe.forEach(cur => cur.innerHTML = '')
-      console.log(iframe)
-  }
-  </script>
 </body>
 
 </html>
